--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>渴不渴以</title>
+    <!-- 連接css -->
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <nav>
-      <div>
+      <div id="box">
         <a href="#">
           <img src="./img/logo.png" alt="渴不渴以 logo" />
         </a>
