--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         </div>
       </div>
     </nav>
-    <div id="banner"></div>
+    <div id="banner">
+        <img src="./img/banner_title.png" alt="渴不渴以喝一口">
+    </div>
   </body>
 </html>
