--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
       </div>
     </nav>
     <div id="banner">
-        <img src="./img/banner_title.png" alt="渴不渴以喝一口">
+      <img src="./img/banner_title.png" alt="渴不渴以喝一口" />
+    </div>
+
+    <div id="contant">
+      <h1>最新消息</h1>
+      <h1>推薦飲品</h1>
+      <h1>經營理念</h1>
     </div>
   </body>
 </html>
