--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
           <p>
             夏日炎炎，即日起至2020.10.31日，全館所有飲品8折起，快來渴不渴以解你的渴吧!
           </p>
-          <img src="./img/new.png" alt="最新消息縮圖" />
+          <div>
+            <img src="./img/new.png" alt="最新消息縮圖" />
+          </div>
         </div>
         <div>
           <h3>優惠資訊</h3>
@@ -53,7 +55,9 @@
           <p>
             夏日炎炎，即日起至2020.10.31日，全館所有飲品8折起，快來渴不渴以解你的渴吧!
           </p>
-          <img src="./img/new.png" alt="最新消息縮圖" />
+          <div>
+              <img src="./img/new.png" alt="最新消息縮圖" />
+          </div>
         </div>
         <div>
           <h3>優惠資訊</h3>
@@ -62,7 +66,9 @@
           <p>
             夏日炎炎，即日起至2020.10.31日，全館所有飲品8折起，快來渴不渴以解你的渴吧!
           </p>
-          <img src="./img/new.png" alt="最新消息縮圖" />
+          <div>
+              <img src="./img/new.png" alt="最新消息縮圖" />
+          </div>
         </div>
       </section>
       <h1>推薦飲品</h1>
@@ -86,9 +92,9 @@
         </div>
       </section>
       <footer>
-          <img src="./img/logo.png" alt="渴不渴以">
-          <p>臺南市安南區安南路一段1號|cobucoyi@gmail.com</p>
-          <p>© 2015 - 2020 渴不渴以 All right reserved.</p>
+        <img src="./img/logo.png" alt="渴不渴以" />
+        <p>臺南市安南區安南路一段1號|cobucoyi@gmail.com</p>
+        <p>© 2015 - 2020 渴不渴以 All right reserved.</p>
       </footer>
     </div>
   </body>
